первая версия ДЗ 6

--- a/portfolio.html
+++ b/portfolio.html
@@ -359,6 +359,27 @@
             </li>
           </ul>
         </div>
+        <div class="foot-warm">
+          <form class="foot-form">
+            <div class="foot-capsule-form">
+              <label for="foot-email" class="foot-label foot-title"
+                >Подпишитесь на рассылку</label>
+              <input
+                type="email"
+                id="foot-email"
+                name="foot-email"
+                class="foot-input"
+                placeholder="E-mail"
+              />
+            </div>
+            <button type="submit" class="foot-btn btn">
+              Подписаться
+              <svg class="foot-btn-icon" width="24" height="24">
+                <use href="./images/ikons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
