--- a/index.html
+++ b/index.html
@@ -470,6 +470,28 @@
             </li>
           </ul>
         </div>
+        <div class="foot-warm">
+          <form class="foot-form">
+            <div class="foot-capsule-form">
+              <label for="foot-email" class="foot-label foot-title"
+                >Подпишитесь на рассылку</label
+              >
+              <input
+                type="email"
+                id="foot-email"
+                name="foot-email"
+                class="foot-input"
+                placeholder="E-mail"
+              />
+            </div>
+            <button type="submit" class="foot-btn btn">
+              Подписаться
+              <svg class="foot-btn-icon" width="24" height="24">
+                <use href="./images/ikons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrob is-hidden" data-modal>
@@ -479,6 +501,70 @@
             <use href="./images/ikons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal-form">
+          <label class="form-field">
+            <span class="modal-label">Имя</span>
+            <input type="text" name="user-name" class="modal-input" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/ikons.svg#icon-person-black-18dp-1-1"></use>
+            </svg>
+          </label>
+
+          <label class="form-field"
+            ><span class="modal-label">Телефон</span>
+            <input
+              id="user-tel"
+              type="tel"
+              name="user-tel"
+              class="modal-input"
+            />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/ikons.svg#icon-phone"></use>
+            </svg>
+          </label>
+
+          <label class="form-field">
+            <span class="modal-label">Почта</span>
+
+            <input type="email" name="user-email" class="modal-input" /><svg
+              class="modal-icon"
+              width="18"
+              height="18"
+            >
+              <use href="./images/ikons.svg#icon-email-black-18dp-1"></use>
+            </svg>
+          </label>
+
+          <label class="form-field">
+            <span class="modal-label">Комментарий</span>
+            <textarea
+              name="user-text"
+              class="modal-text"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+          <div class="form-field">
+            <input
+              type="checkbox"
+              name="check"
+              id="check"
+              class="modal-check visually-hidden"
+            />
+            <label for="check" class="check-label">
+              <span
+                ><svg class="modal-icon-check" width="16" height="15">
+                  <use href="./images/ikons.svg#icon-check"></use>
+                </svg> </span
+              >Соглашаюсь с рассылкой и принимаю&nbsp;<a
+                href=""
+                class="check-link"
+                >Условия договора</a
+              >
+            </label>
+          </div>
+          <button type="submit" class="modal-button btn">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
