Коррекция после проверки
-исправлены margin

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               placeholder="Введите текст"
             ></textarea>
           </label>
-          <div class="form-field">
+          <div class="form-field not-margin">
             <input
               type="checkbox"
               name="check"
