вторая корректировкa margin-bottom

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             </svg>
           </label>
 
-          <label class="form-field">
+          <label class="form-field mod-margin">
             <span class="modal-label">Комментарий</span>
             <textarea
               name="user-text"
